<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/app_button_1"
        android:layout_width="200dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
        android:text="@string/app_1"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/app_button_2"
        android:layout_width="200dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
        android:text="@string/app_2"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/app_button_3"
        android:layout_width="200dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
        android:text="@string/app_3"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/app_button_4"
        android:layout_width="200dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
        android:text="@string/app_4"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/app_button_5"
        android:layout_width="200dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
        android:text="@string/app_5"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/app_button_6"
        android:layout_width="200dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/abc_button_padding_horizontal_material"
        android:text="@string/app_6"
        android:onClick="onClick"/>

</LinearLayout>
